# Xylella_fastidiosa_detection

./: .gitignore  Preprocessing.ipynb  README.md  Raster_loading.ipynb  Untitled.ipynb  Xylella_detection.ipynb  Xylella_detection_cnn.ipynb  data_preprocessing.py  pyproject.toml  requirements.txt  run_models.py  xylella_detection_cnn.py  xylella_detection_nn.py  xylella_detection_nn.sh
Classification datasets/Train and test sets/Spectral bands and indices/: X_test.lzma  Y_test.lzma  Y_train.lzma  cluster_id_test.lzma  cluster_id_train.lzma  scaler.lzma
Data/QPCR tests/: Dataset_pcr_processed_degrees.geojson  Exportació coordenades.xlsx  Exportació coordenades_csv.csv  SON-COT 2019.xlsx  new_Dataset_pcr_processed.geojson  new_red_green.geojson  rojo_verde_daltonia.geojson
Data/Satellite/: Puigpunyent_multispectral.tif  Puigpunyent_panchromatic.tif  metadata.IMD
configs/data/: preprocessing.yaml
general_utils/: file_management.py  gdal_utils.py
src/models/: ann.py
src/training/: callbacks.py
